--- a/css/app.css
+++ b/css/app.css
@@ -3927,6 +3927,27 @@ line-height: 1.15;
   height: auto;
 }
 
+.show .gallery__block {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.resize-iframe{
+  max-width: 100%;
+  margin: 0px auto;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0px;
+}
+.resize-iframe iframe {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
 .popup-buble.mfp-bg {
   background-color: rgba(0, 0, 0, 0.5);
 }
